# MyChat

./: .gitignore  CMakeLists.txt  README.md
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp  usermodel.hpp
include/server/db/: connectionpool.hpp  db.h  user.hpp
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemodel.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/client/: mian.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp  usermodel.cpp
src/server/db/: connectionpool.cpp  db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
test/testjson/: testjson.cpp
test/testmuduo/: CMakeLists.txt  muduo_server.cpp
